#4940 - OAuth and SAML logins do not work if a servlet path is used
- Include servlet context path in URLs for SAML/OAuth login
- Update OAuth/SAML documentation
- Better display of realms on user management page
- Include SAML realm in user-detail realm dropdown
- Issue OAuth/SAML login failures as warning